--- a/examples/tpl-3.html
+++ b/examples/tpl-3.html
@@ -1,9 +1,15 @@
-<ul>
+<ul class="pagination">
     <li ng-class="{disabled: pagination.isFirst(pagination.currentPage)}" ng-click="pagination.setCurrent(pagination.startPage)">
         <a href>First</a>
     </li>
+    <li ng-class="{disabled: pagination.isInvalidShift(-1)}" ng-click="pagination.shiftCurrent(-1)">
+        <a href>Prev</a>
+    </li>
     <li ng-repeat="page in pagination.pages track by $index" ng-class="{active: pagination.isCurrent(page)}" ng-click="pagination.setCurrent(page)">
         <a href ng-bind="page"></a>
+    </li>
+    <li ng-class="{disabled: pagination.isInvalidShift(1)}" ng-click="pagination.shiftCurrent(1)">
+        <a href>Next</a>
     </li>
     <li ng-class="{disabled: pagination.isLast(pagination.currentPage)}" ng-click="pagination.setCurrent(pagination.endPage)">
         <a href>Last</a>
