--- a/examples/tpl-4.html
+++ b/examples/tpl-4.html
@@ -2,19 +2,19 @@
     <li ng-class="{disabled: pagination.isFirst(pagination.currentPage)}" ng-click="pagination.setCurrent(pagination.startPage)">
         <a href>First</a>
     </li>
-    <li ng-class="{disabled: pagination.isInvalidShift(-1)}" ng-click="pagination.shiftCurrent(-1)">
+    <li ng-class="{disabled: !pagination.inRange(pagination.currentPage - 1)}" ng-click="pagination.setCurrent(pagination.currentPage - 1)">
         <a href>Prev</a>
     </li>
-    <li ng-hide="pagination.isInvalidShift(-pagination.pages.length/2)" ng-click="pagination.shiftCurrent(-pagination.pages.length/2)">
+    <li ng-show="pagination.inRange(pagination.pages[0] - 1)" ng-click="pagination.setCurrent(pagination.currentPage - pagination.maxNumbers)">
         <a href>&hellip;</a>
     </li>
     <li ng-repeat="page in pagination.pages track by $index" ng-class="{active: pagination.isCurrent(page)}" ng-click="pagination.setCurrent(page)">
         <a href ng-bind="page"></a>
     </li>
-    <li ng-hide="pagination.isInvalidShift(pagination.pages.length/2)" ng-click="pagination.shiftCurrent(pagination.pages.length/2)">
+    <li ng-show="pagination.inRange(pagination.pages[pagination.pages.length - 1] + 1)" ng-click="pagination.setCurrent(pagination.currentPage + pagination.maxNumbers)">
         <a href>&hellip;</a>
     </li>
-    <li ng-class="{disabled: pagination.isInvalidShift(1)}" ng-click="pagination.shiftCurrent(1)">
+    <li ng-class="{disabled: !pagination.inRange(pagination.currentPage + 1)}" ng-click="pagination.setCurrent(pagination.currentPage + 1)">
         <a href>Next</a>
     </li>
     <li ng-class="{disabled: pagination.isLast(pagination.currentPage)}" ng-click="pagination.setCurrent(pagination.endPage)">
